@@ -1,3 +1,8 @@
+Fri Mar 16 04:59:53 GMT 2012  Olly Betts <olly@survex.com>
+
+	* Makefile.am,m4-macros/xapian.m4: Rename libxapian to libxapian-1.3
+	  and xapian.m4 to xapian-1.3.m4.
+
 Wed Mar 14 04:58:55 GMT 2012  Olly Betts <olly@survex.com>
 
 	* NEWS,tests/api_unicode.cc,unicode/tclUniData.cc: Update
